@@ -23,43 +23,6 @@
 ;; CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 ;; SOFTWARE.
 
-(scheme base)
-(scheme case-lambda)
-(scheme char)
-(scheme complex)
-(scheme cxr)
-(scheme eval)
-(scheme file)
-(scheme inexact)
-(scheme lazy)
-(scheme load)
-(scheme process-context)
-(scheme read)
-(scheme repl)
-(scheme r5rs)
-(scheme time)
-(scheme write)
-(srfi 1)
-(srfi 2)
-(srfi 8)
-(srfi 28)
-(srfi 37)
-(srfi 59)
-(srfi 64)
-(srfi 125)
-(srfi 128)
-(srfi 139)
-(srfi 158)
-(srfi 188)
-(srfi 190)
-(srfi 206)
-(srfi 211 identifier-syntax)
-(srfi 211 syntax-case)
-(srfi 211 syntax-parameter)
-(srfi 211 variable-transformer)
-(srfi 211 with-ellipsis)
-(srfi 212)
-(alias (srfi 1) (scheme list))
-(alias (srfi 125) (scheme hash-table))
-(alias (srfi 128) (scheme comparator))
-(auxiliary-syntax (srfi 206 all))
+(define-library (srfi 212)
+  (export alias)
+  (import (unsyntax $bootstrap)))
